2006-06-25 David Brown <dmlb2000@gmail.com>
	* INSTALL: forgot one var change
	* BUILD: forgot one var change...

2006-06-25 David Brown <dmlb2000@gmail.com>
	* BUILD: updated for changes to PREPARE
	* INSTALL: updated for changes to PREPARE
	* PRE_BUILD: updated for changes to PREPARE

2006-06-25 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-mm2
	* info/patches/mm_patches/2.6.17-mm2: added
	* info/patches/mm_patches/2.6.17-mm1: added
	* info/patches/mm_patches/2.6.17-rc6-mm2: added
	* info/patches/mm_patches/2.6.17-rc6-mm1: added
	* info/patches/maintenance_patches/patch-2.6.16.21: added
	* info/patches/maintenance_patches/patch-2.6.16.22: added

2006-06-25 David Brown <dmlb2000@gmail.com>
	* PREPARE: make global and persistent vars all uppercase, put
	  function before all functions, add function to convert the
		old persistent vars to the new set of persistent vars,
		change names of global and persistent vars to be a bit more
		descriptive of what they represent, added checklist to patch
		submenus so its a bit more apparent what patches are 
		selected
	* DETAILS: fixed sourcing of details.defaults since the name
	  changed.

2006-06-21 Juuso Alasuutari <iuso@sourcemage.org>
	* latest.defaults: updated latest to patch-2.6.17-ck1, 
	  patch-2.6.17-cks1
	* info/patches/ck_patches/patch-2.6.17-ck1: added
	* info/patches/ck_server_patches/patch-2.6.17-cks1: added

2006-06-20 David Brown <dmlb2000@gmail.com>
	* DETAILS: fixed some spacing issues and added 
	  STAGED_INSTALL=off for stage root sorcery

2006-06-20 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: updated latest to patch-2.6.17.1
	* info/patches/maintenance_patches/patch-2.6.17.1: added

2006-06-20 Ladislav Hagara <hgr@vabo.cz>
	* info/patches/PRE_2_6/patch-2.6.17: added
	* info/patches/maintenance_patches/patch-2.6.17: added
	* info/kernels/2.6.17: added
	* latest.defaults: updated to 2.6.17

2006-06-06 Juuso Alasuutari <iuso@sourcemage.org>