@@ -1,3 +1,7 @@
+2006-06-26 Eric Sandall <eric@sandall.us>
+	* info/patches/sws2_patches/suspend2-2.2.6-for-2.6.17.patch: Added
+	  suspend2 2.2.6 patch for kernel 2.6.17
+
 2006-06-25 David Brown <dmlb2000@gmail.com>
 	* INSTALL: forgot one var change
 	* BUILD: forgot one var change...
